--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,31 +1,78 @@
+// #container {
+//   text-align: center;
+//
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+//
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
+//
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
+//
+//   color: #8c8c8c;
+//
+//   margin: 0;
+// }
+//
+// #container a {
+//   text-decoration: none;
+// }
+//
+// ion-content ion-toolbar {
+//   --background: translucent;
+// }
+
+ion-content {
+  // propriété css d'ionic
+  --ion-background-color: #333333;
+}
+
+.img-box {
+  padding: 20px;
+  background-color: #1d1d1d;
+}
+
 #container {
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  padding: 20px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
+h2 {
+  color: white;
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+  margin: 2px 0px;
 }
 
-#container a {
-  text-decoration: none;
+ion-range {
+  padding: 0px 10px;
+  --bar-height: 3px;
 }
 
-ion-content ion-toolbar {
-  --background: translucent;
+p {
+  color: #b7b6b6;
+  font-size: 13px;
+  margin: 0px;
+  font-weight: 500;
+}
+
+.flex-box {
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ion-button {
+  height: 86px;
+  min-height: max-content;
+  margin: 0px 7px;
+  font-size: 21px;
 }
