--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,8 +31,8 @@
         <ion-icon slot="icon-only" name="play-back"></ion-icon>
       </ion-button>
 
-      <ion-button shape="round" color="light"> <!-- Pour avoir un fond clair -->
-        <ion-icon slot="icon-only" name="play"></ion-icon>
+      <ion-button (click)='playPause()' shape="round" color="light"> <!-- Pour avoir un fond clair -->
+        <ion-icon slot="icon-only" [name]="playIcon"></ion-icon> <!-- En ajoutant des crochets à l'attribut name je peux lui attribuer une variable. -->
       </ion-button>
 
       <ion-button fill="clear" color="light"> <!-- Pour avoir un fond clair -->
